@@ -1,16 +1,18 @@
 Package: spider
 Type: Package
 Title: Species Identity and Evolution in R
-Version: 1.1-1
-Date: 2011-11-27
-Author: Samuel Brown, Rupert Collins, Stephane Boyer, Marie-Caroline Lefort, Jagoba Malumbres-Olarte, Cor Vink, Rob Cruickshank
+Version: 1.1-2
+Date: 2012-03-10
+Author: Samuel Brown, Rupert Collins, Stephane Boyer, Marie-Caroline
+        Lefort, Jagoba Malumbres-Olarte, Cor Vink, Rob Cruickshank
 Maintainer: Samuel Brown <s_d_j_brown@hotmail.com>
-Description: A package for the analysis of species limits and DNA barcoding data
+Description: A package for the analysis of species limits and DNA
+        barcoding data
 License: GPL
 LazyLoad: yes
 Depends: R (>= 2.10), ape, pegas
 Repository: CRAN
 Repository/R-Forge/Project: spider
-Repository/R-Forge/Revision: 38
-Date/Publication: 2011-12-27 10:06:21
-Packaged: 2011-12-23 22:55:37 UTC; rforge
+Repository/R-Forge/Revision: 42
+Packaged: 2012-03-10 03:15:41 UTC; rforge
+Date/Publication: 2012-03-14 06:26:48
